docs/tests/parser/expressions/valid/ExprMemberAccess.src
fn void test() {
    let int x = p.x;
    let int y = p.y;
    let int z = p.nested.value;
}
