docs/tests/parser/expressions/invalid/ExprMissingOperand.src
fn void test() {
    let int x = 1 +;
}
